fixed form error msg not showing in address acc

--- a/assets/sass/ltk.scss
+++ b/assets/sass/ltk.scss
@@ -32,3 +32,6 @@
         }
     }
 }
+#billing_country_field {
+    display: none;
+}
